# welltrack

./: .gitignore  LICENSE  Makefile  README.md  create_sampledata.py  manifest.json  mkdocs.yml  mood.yml  new-body-back.html  new-body-front.html  planning.md  product-requirements.md  project-architecture.md  pyproject.toml  refactor.md  sw.js  system-workflow.md  tasks.md  welltrack.html  welltrack_export_1758653412852.json
.github/workflows/: main.yml  static.yml
dev/: changelog.md  development.md  marimo-development.md  product-requirements.md  product-specifications.md  project-structure.md  system-workflow.md  tasks.md  workpad.md
dev/prototype/: new-pain-entry.html
dev/prototypes/: audio-gps-logging.html  pain-free-selector.html
docs/: mood-and-pain.md
jules-scratch/verification/: dummy_data.json  verify_all_features.py  verify_changes.py  verify_docs.py  verify_features.py  verify_ui_changes.py
prototype/: new-pain-entry.html
scripts/: create-mood-chart-data.py  create-sample-data.py  dev_serve.py  extract_mood_pain.py  filter_missclicks.py  verify_jules_example.py  welltrack-lab.py
src/prototype/: new-pain-entry.html
src/welltrack/: index.html  sw.js  welltrack.html
src/welltrack_lab/: __init__.py  data.py
tests/: conftest.py  test_darktheme.py  test_gui.py  test_mood_chart.py  test_mood_chart_screenshot.py  test_new_pain_entry.py  test_pain_entry_prototype.py  test_pain_prototype.py  test_prototype_pain_entry.py  test_screenshots.py  test_ui_themes.py
tests/fixtures/: sample-data-mood-chart.json
